Fixed score div center alignment

--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,10 @@ body {
   border-radius: 5px;
 }
 #score {
-  margin: 20px 50% 20px 50%;
+  width: 100%;
+  padding-top: 30px;
+  height: 50px;
+  text-align: center;
   font-size: 30px;
   color: white;
 }
